Tableborder and word-wrap fix

--- a/members/static/members/sass/base.scss
+++ b/members/static/members/sass/base.scss
@@ -75,3 +75,7 @@ $header_font: 'Bungee', cursive;
         color: black;
     }
 }
+
+.table {
+    word-wrap: break-word;
+}
